# music-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  MusicBot.py  README.md  Song.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml
musicbot/: MusicBot.py  MusicCommands.py  Song.py  __init__.py  music_bot.py  music_commands.py  utils.py
