[project]
name = "music-bot"
version = "0.1.0"
description = "Music bot for playing music on Discord from Youtube."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "beautifulsoup4>=4.14.3",
  "discord-py>=2.6.4",
  "pynacl>=1.6.1",
  "python-dotenv>=1.2.1",
  "pytubefix>=10.3.5",
]

[tool.ruff.lint]
select = ["ALL"]

ignore = ["D", "CPY001", "PLR6301", "TC004"]

preview = true

[tool.ruff.format]

preview = true
